# license-dashboard-rust

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: manual-deploy.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260101000001_init.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
frontend/: package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/components/: AppConfigTable.svelte  FilterBar.svelte
frontend/src/routes/: +page.svelte
